{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 13,
  "lineage": "191531aa-2490-9c7d-cc4d-bd55712ba53b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-ins-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e24e5b976ae3cdd",
            "arn": "arn:aws:ec2:us-east-1:501406858769:elastic-ip/eipalloc-06e24e5b976ae3cdd",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-00943a326f788179a",
            "domain": "vpc",
            "id": "eipalloc-06e24e5b976ae3cdd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-010a92218789b4009",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-34-194-202-182.compute-1.amazonaws.com",
            "public_ip": "34.194.202.182",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_network_interface.Dev-vm-nic1",
            "aws_security_group.dev-sec-group",
            "aws_subnet.dev-sub-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webdev-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:501406858769:instance/i-0a24ff4c94bd72c5c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a24ff4c94bd72c5c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-web",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-010a92218789b4009"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-010a92218789b4009"
              }
            ],
            "primary_network_interface_id": "eni-010a92218789b4009",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "34.194.202.182",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bc9dbb536ed54d0d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a120364ce47de045",
            "tags": {
              "Name": "Development Web Server"
            },
            "tags_all": {
              "Name": "Development Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0519303331f34830f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "501406858769",
            "id": "i-0a24ff4c94bd72c5c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_network_interface.Dev-vm-nic1",
            "aws_security_group.dev-sec-group",
            "aws_subnet.dev-sub-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501406858769:internet-gateway/igw-0274502d9094d6cd5",
            "id": "igw-0274502d9094d6cd5",
            "owner_id": "501406858769",
            "region": "us-east-1",
            "tags": {
              "Name": "Dev igw"
            },
            "tags_all": {
              "Name": "Dev igw"
            },
            "vpc_id": "vpc-0976660cf692dc660"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "Dev-vm-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501406858769:network-interface/eni-010a92218789b4009",
            "id": "eni-010a92218789b4009",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:68:f8:62:cf:2b",
            "owner_id": "501406858769",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-0519303331f34830f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a120364ce47de045"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dev-sec-group",
            "aws_subnet.dev-sub-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501406858769:route-table/rtb-0b80cddacc1a4e52c",
            "id": "rtb-0b80cddacc1a4e52c",
            "owner_id": "501406858769",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0274502d9094d6cd5",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0274502d9094d6cd5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev Route Table"
            },
            "tags_all": {
              "Name": "Dev Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0976660cf692dc660"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "501406858769",
            "id": "rtb-0b80cddacc1a4e52c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-dev-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef357c35db6edef3",
            "region": "us-east-1",
            "route_table_id": "rtb-0b80cddacc1a4e52c",
            "subnet_id": "subnet-0a120364ce47de045"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_route_table.dev-route-table",
            "aws_subnet.dev-sub-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501406858769:security-group/sg-0519303331f34830f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0519303331f34830f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Dev Security Group",
            "name_prefix": "",
            "owner_id": "501406858769",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow Web and SSH"
            },
            "tags_all": {
              "Name": "Allow Web and SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0976660cf692dc660"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "501406858769",
            "id": "sg-0519303331f34830f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501406858769:subnet/subnet-0a120364ce47de045",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a120364ce47de045",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501406858769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Dev Subnet 1"
            },
            "tags_all": {
              "Name": "Dev Subnet 1"
            },
            "vpc_id": "vpc-0976660cf692dc660"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "501406858769",
            "id": "subnet-0a120364ce47de045",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501406858769:vpc/vpc-0976660cf692dc660",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07555c0e1d05b1c05",
            "default_route_table_id": "rtb-092e931b17e65c45b",
            "default_security_group_id": "sg-0a36792ce82aa2739",
            "dhcp_options_id": "dopt-03c0db124826170a1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0976660cf692dc660",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092e931b17e65c45b",
            "owner_id": "501406858769",
            "region": "us-east-1",
            "tags": {
              "Name": "Dev VPC"
            },
            "tags_all": {
              "Name": "Dev VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}